- compress sources with xz instead of bzip2

Version 6.39 - 21 November 2010

- install zeroconf documentation and example files.
- resurrect urpmi.recover now that the required functionality has been brought
  back with rpm5.

Version 6.38 - 18 June 2010

- add --zeroconf support in urpmi.addmedia

Version 6.37 - 28 May 2010
- urpmq
  o fix listing of groups when listing all packages (also fixes #59321)

Version 6.36 - 26 May 2010

- urpmq
  o allow to use -g with --list

Version 6.35 - 23 April 2010

- urpmi.addmedia:
  o disable non-free repository by default for Free edition (#40033)
-urpmi:
  o when using --update, allow package dependencies to be fetched from
    non-update media (#51268)
  o don't confuse media/media keys when a package is available from different
    media (eg CDROM/network)

Version 6.34 - 25 January 2010

- don't crash when parsing an invalid media.cfg file in
  /etc/urpmi/mediacfg.d
- fix being unable to run a second transaction set in rpmdrake (#54842)

Version 6.33 - 12 January 2010

- invalidate mirror list cache when it's an old format (ie one which does not 
  store the time of product.id)
- fix urpmq --sources documentation (in --help)
- do not advise to reboot when inside a chroot
- do not cache media.cfg from the media when using a virtual one (ie a
  medium for which we don't want to cache metadata)
- ignore gpg_pubkey packages in urpmq --not-available
- fix not being able to remove orphan kernels due to dkms packages (#53414)
- allow use of $RELEASE/$ARCH with urpmi.addmedia --distrib
- fix media redirection (was broken when trying to fix #52276)
- fix bash completion script (#55716)

Version 6.32 - 29 October 2009

- if package B obsoletes package A and if A is in potential orphans and B is
  already installed, don't unconditionally mark B as a potential orphan,
  fixes #54590
- make aria2 disabling work in all cases, should fix #53434 for good.

Version 6.31 - 21 October 2009
