@@ -1,4 +1,6 @@
 - compress sources with xz instead of bzip2
+- fix (g)urpmi --auto-select --update defaulting to all media when
+  there're no update media (#1024)
 
 Version 6.39 - 21 November 2010
 
